@@ -1,3 +1,9 @@
+Tue Sep 20 08:39:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
+
+        * orbsvcs/tests/Notify/Basic/run_test_ipv6.pl:
+
+          Added IPV6 specific testscript.
+
 Tue Sep 20 08:32:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
 
         * orbsvcs/tests/IOR_MCast/ior_mcast_client_i.cpp:
